--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     </head>
     <body>
         <div class="navbar1">
-        <a href="#startbutton">Etusivu</a>
         <a href="#about">Credits</a>
+        <a href="#startbutton">Etusivu</a>
+        <h1>Versio BETA-1.0</h1>
         </div>
         <section class="startbutton">
         <div class="nappi" id="startbutton">
@@ -33,6 +34,10 @@
             <div class="eetu">
                 <h1>Eetu</h1>
                 <a>Exists</a>
+            </div>
+            <div class="joona">
+                 <h1>Paistettu</h1>
+                 <a>Beta test</a>
             </div>
          </section>
     </body>
