--- a/clicker.html
+++ b/clicker.html
@@ -38,6 +38,16 @@
                     class="automaatiolvl1" id="automaatiolvl1">
                 Bricked lvl 1 (Hinta 50mm) (automaatio)
             </button>
+            
+             <button type="button" onclick="setAutomaatioarvo(5, 200)" 
+                    class="automaatiolvl1" id="automaatiolvl1">
+                Bricked lvl 5 (Hinta 200mm) (automaatio)
+            </button>
+
+             <button type="button" onclick="setAutomaatioarvo(5, 200)" 
+                    class="automaatiolvl1" id="automaatiolvl1">
+                Bricked lvl 5 (Hinta 200mm) (automaatio)
+            </button>
 
             <h1>Tulossa pian</h1>
         </div>
